--- a/style.css
+++ b/style.css
@@ -16,12 +16,15 @@
 
 body {
     background-image: url("imgs/background.gif");
-    background-size: cover;
+    background-size: 120%;
     background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
     color: var(--text-light);
     font-family: monospace;
     margin: 0;
     padding: 0;
+    min-height: 100vh;
 }
 
 .main-container {
