--- a/style.css
+++ b/style.css
@@ -139,3 +139,25 @@ body {
 .footer-btn:focus {
     outline: none;
 }
+
+@media (max-width: 700px) {
+    body {
+        background-image: url("imgs/background.gif");
+        background-size: 300%;
+        color: var(--text-light);
+        font-family: monospace;
+        margin: 0;
+        padding: 0;
+    }
+}
+
+@media (max-width: 400px) {
+    body {
+        background-image: url("imgs/background.gif");
+        background-size: 600%;
+        color: var(--text-light);
+        font-family: monospace;
+        margin: 0;
+        padding: 0;
+    }
+}
