--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
     --white: #FBFFFF;
     --dark-hover: #c4c3c3;
     --neon-blue: #4C9EFF;
-    --background-dark: #101018;
+    --background-dark: #222527;
     --text-light: #c5c5c5;
     --img-border: #cccbcb;
-    --glass-bg: rgba(16, 16, 16, 0.9);
-    --glass-bg2: rgba(12, 18, 29, 0.75);
+    --glass-bg: rgba(32, 34, 36, 0.9);
+    --glass-bg2: rgba(35, 38, 39, 0.75);
     --glass-border: rgba(255, 255, 255, 0.1);
 }
 
@@ -120,7 +120,7 @@ body {
 
 .footer-btn {
     background: var(--glass-bg);
-    border: 2px solid var(--white);
+    border: 2px solid #9fe6e6;
     color: var(--white);
     font-size: 14px;
     padding: 10px 20px;
