Fixed color pallete

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --white: #FBFFFF;
+    --white: #9fe6e6;
     --dark-hover: #c4c3c3;
     --neon-blue: #4C9EFF;
     --background-dark: #222527;
